extra input veld en item opslagen
Begin om item opslaan lokaal en een input veld voor de hoeveelheid op je lijstje

--- a/Readme
+++ b/Readme
@@ -3,5 +3,10 @@ main css
 Kijken hoe ik de hoeken van een div kan afronden
 https://bobdewebbouwer.com/ronde-hoeken-css-3/#:~:text=Het%20toevoegen%20van%20ronde%20hoeken,groter%20de%20afgeronde%20hoeken%20worden.
 
-Kleuren
-www.color-hex.com/
+css
+    Kleuren
+    www.color-hex.com/
+
+js
+    https://www.w3schools.com/js/js_json_parse.asp
+    https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage
