item key maken maken en in array steken
Probleem: zelf als ik key delete blijft deze dezelfde waarde behouden

--- a/Readme
+++ b/Readme
@@ -5,10 +5,11 @@ https://bobdewebbouwer.com/ronde-hoeken-css-3/#:~:text=Het%20toevoegen%20van%20r
 
 css
     Kleuren
-    www.color-hex.com/
+    www.color-hex.com
 
 js
     https://www.w3schools.com/js/js_json_parse.asp
     https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage
     https://stackoverflow.com/questions/51303211/how-to-add-item-to-local-storage
     https://blog.logrocket.com/localstorage-javascript-complete-guide/
+    https://chatgpt.com/share/b5191671-29e8-4406-8bbb-a7c5b695bee6
