--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
+Alles van de web advanced cursus is ook gebruikt
+
 main css
 
 Kijken hoe ik de hoeken van een div kan afronden
@@ -28,6 +30,9 @@ js
     https://developer.mozilla.org/en-US/docs/Web/API/setTimeout
     https://www.w3schools.com/jsref/met_win_settimeout.asp
     https://chatgpt.com/share/9d2f2feb-333a-4a02-bc77-fec408a0d4e3
+    https://www.w3schools.com/js/js_async.asp
+    https://www.w3schools.com/css/css3_animations.asp
+    https://www.w3schools.com/
 
 
 
